--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         - #CTA
       -->
 
-      <section class="testimonials-section">
+      <div class="testimonials-section">
 
         <!-- Section Header Starts -->
         <header class="section-header">
@@ -557,13 +557,10 @@
           <!-- Item1 Starts -->
           <div class="item testimonial-card">
             <main class="test-card-body">
-              <div class="quote">
-                <i class="fa fa-quote-left"></i>
-                <h2>Awesome Coding</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+              <p>Since active collaboration with Verify Ads, our visibility on the Internet has increased significantly.
+                They really get down to the fundamentals of what our businesses require and provide solutions that
+                count. I must admit we received fantastic service from them!</p>
               <div class="ratings">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -571,15 +568,13 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-
             </main>
             <div class="profile">
               <div class="profile-image">
                 <img src="./assets/img/image1.jpg">
               </div>
               <div class="profile-desc">
-                <span>Person Name</span>
-                <span>Description</span>
+                <span>Susant Nath</span>
               </div>
             </div>
           </div>
@@ -588,13 +583,10 @@
           <!-- Item2 Starts -->
           <div class="item testimonial-card">
             <main class="test-card-body">
-              <div class="quote">
-                <i class="fa fa-quote-left"></i>
-                <h2>Awesome Coding</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+              <p>The people at Verify Ads have been great, in particular I want to thank you. They’ve been effective for
+                finding potential customers or making people aware of the existence of our store. This is an efficient,
+                business and businesslike approach which appears to be extremely effective. Highly recommended!</p>
               <div class="ratings">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -602,15 +594,13 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-
             </main>
             <div class="profile">
               <div class="profile-image">
                 <img src="./assets/img/image2.jpg">
               </div>
               <div class="profile-desc">
-                <span>Person Name</span>
-                <span>Description</span>
+                <span>Prangya Nayak</span>
               </div>
             </div>
           </div>
@@ -619,13 +609,10 @@
           <!-- Item3 Starts -->
           <div class="item testimonial-card">
             <main class="test-card-body">
-              <div class="quote">
-                <i class="fa fa-quote-left"></i>
-                <h2>Awesome Coding</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
               <div class="ratings">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -633,15 +620,13 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-
             </main>
             <div class="profile">
               <div class="profile-image">
                 <img src="./assets/img/image3.jpg">
               </div>
               <div class="profile-desc">
-                <span>Person Name</span>
-                <span>Description</span>
+                <span>Akash Pradhan</span>
               </div>
             </div>
           </div>
@@ -650,13 +635,10 @@
           <!-- Item4 Starts -->
           <div class="item testimonial-card">
             <main class="test-card-body">
-              <div class="quote">
-                <i class="fa fa-quote-left"></i>
-                <h2>Awesome Coding</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+              <p>Verify Ads contributed hugely when it came to fine tuning our strategy and it saved a lot of cost in
+                the long run. There being increased ROI and improved level of students’ engagement were observed. They
+                did a very great job for me!</p>
               <div class="ratings">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -664,15 +646,13 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-
             </main>
             <div class="profile">
               <div class="profile-image">
                 <img src="./assets/img/image4.jpg">
               </div>
               <div class="profile-desc">
-                <span>Person Name</span>
-                <span>Description</span>
+                <span>Amresh Panda</span>
               </div>
             </div>
           </div>
@@ -681,13 +661,10 @@
           <!-- Item5 Starts -->
           <div class="item testimonial-card">
             <main class="test-card-body">
-              <div class="quote">
-                <i class="fa fa-quote-left"></i>
-                <h2>Awesome Coding</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+              <p>I can say that collaborating with Verify Ads was easy and with no glitches. I highly recommend their
+                services because they met the deadline. There has been a gradual improvement over the traffic and a
+                progressive increase in the number of conversions. Awesome company, highly recommend services.</p>
               <div class="ratings">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -695,15 +672,13 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-
             </main>
             <div class="profile">
               <div class="profile-image">
-                <img src="./assets/img/image5.jpg">
+                <img src="./assets/img/image4.jpg">
               </div>
               <div class="profile-desc">
-                <span>Person Name</span>
-                <span>Description</span>
+                <span>Aditya Kar</span>
               </div>
             </div>
           </div>
@@ -712,13 +687,10 @@
           <!-- Item6 Starts -->
           <div class="item testimonial-card">
             <main class="test-card-body">
-              <div class="quote">
-                <i class="fa fa-quote-left"></i>
-                <h2>Awesome Coding</h2>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+              <p>We were able to expand our users on the internet and increased our sales through the use of Verify Ads.
+                They are professional, creative and always quick to respond back in my team. If you have been looking to
+                explore new avenues for your digital marketing business, then I highly endorse them for the job.</p>
               <div class="ratings">
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
@@ -726,15 +698,13 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
               </div>
-
             </main>
             <div class="profile">
               <div class="profile-image">
                 <img src="./assets/img/image6.jpg">
               </div>
               <div class="profile-desc">
-                <span>Person Name</span>
-                <span>Description</span>
+                <span>Sidharth Rout</span>
               </div>
             </div>
           </div>
@@ -743,13 +713,13 @@
         </div>
         <!-- Owl Carousel Slider Ends -->
 
-        
         <div class="button-container">
-          <a href="https://www.example.com/review" target="_blank">
-              <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-          </a>
+          <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
+        </div>
+
+
       </div>
-      
+
       </section>
 
       <div class="social-button whatsapp">
@@ -815,7 +785,7 @@
 
 
 
- <!--  <div class="boxes row-1">
+  <!--  <div class="boxes row-1">
     <button class="box">Improve my essay writing</button>
     <button class="box">Tell me a fun fact about the Roman Empire</button>
     <button class="box">Write a text inviting neighbors to a barbecue</button>
@@ -854,8 +824,12 @@
   <div class="marquee-container">
     <h2>Our Services</h2>
     <div class="marquee-text">
-      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
-        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();"
+        onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email
+        And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom
+        Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development,
+        Software Testing Services & QA, Cloud Server Management
       </marquee>
     </div>
   </div>
@@ -896,18 +870,18 @@
 
   <script>
     // Form submission handler
-    document.getElementById('newsletterForm').addEventListener('submit', async function(event) {
+    document.getElementById('newsletterForm').addEventListener('submit', async function (event) {
       event.preventDefault(); // Prevent default form submission
-  
+
       // Get email input value
       const email = document.getElementById('email').value;
-  
+
       // Check if email input is not empty
       if (!email) {
         alert("Email is required.");
         return;
       }
-  
+
       // API URL
       // const apiUrl = 'http://localhost/restapi/newsletter/newsletter';
       const apiUrl = 'https://verifyads.com/restapi/newsletter/newsletter';
@@ -922,7 +896,7 @@
             email: email  // URL-encoded format
           })
         });
-  
+
         // Handling the response
         const result = await response.json(); // Parse response as JSON
         if (response.ok) {
