--- a/localization.html
+++ b/localization.html
@@ -73,7 +73,7 @@
     <div class="container">
 
       <a href="index.html" class="logo">
-      <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
+        <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -192,7 +192,7 @@
 
             <h2 class="h2 section-title">Our Services</h2>
 
-           <!--  <p class="section-text">
+            <!--  <p class="section-text">
               Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
               development of
               the asset through its charitable foundation.
@@ -210,7 +210,9 @@
                   <h3 class="h3 card-title">Document Translation</h3>
 
                   <p class="card-text">
-                    Whether it is a business contract, advertisement, technical manuals, or financial statements, you can be sure in professional document translation with Verify Ads. We serve many sectors of business so you can be assured of materials being culturally relevant and legally compliant.
+                    Whether it is a business contract, advertisement, technical manuals, or financial statements, you
+                    can be sure in professional document translation with Verify Ads. We serve many sectors of business
+                    so you can be assured of materials being culturally relevant and legally compliant.
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -227,7 +229,10 @@
                   <h3 class="h3 card-title">Website Localization</h3>
 
                   <p class="card-text">
-                    A great website is a global website. We assist in adapting the linguistic characteristics of your web site, its appearance, and practical functionality to the preferred culture of a definite region. We make sure that your online presence reflects the brand and message directly to the target market and in their understanding language for higher conversion rate.
+                    A great website is a global website. We assist in adapting the linguistic characteristics of your
+                    web site, its appearance, and practical functionality to the preferred culture of a definite region.
+                    We make sure that your online presence reflects the brand and message directly to the target market
+                    and in their understanding language for higher conversion rate.
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -235,7 +240,7 @@
               </li>
 
 
-               <li>
+              <li>
                 <div class="about-card">
 
                   <div class="card-icon">
@@ -245,14 +250,16 @@
                   <h3 class="h3 card-title">App Localization</h3>
 
                   <p class="card-text">
-                    Increase your app users’ base by considering different interfaces and content when launching your app in new areas. We focus on transcribing text, converting and localising features, and making sure the customers’ experience does not suffer when you expand your markets.
+                    Increase your app users’ base by considering different interfaces and content when launching your
+                    app in new areas. We focus on transcribing text, converting and localising features, and making sure
+                    the customers’ experience does not suffer when you expand your markets.
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
                 </div>
               </li>
 
-            
+
             </ul>
 
           </div>
@@ -320,7 +327,8 @@
                       <h3 class="h3 card-title">Expertise Across Industries</h3>
 
                       <p class="card-text">
-                        Verify Ads employs specialists from e-Commerce, health care, law, and technology. Our translators and localization professionals are industry-aware for accurate translation.
+                        Verify Ads employs specialists from e-Commerce, health care, law, and technology. Our
+                        translators and localization professionals are industry-aware for accurate translation.
                       </p>
 
                     </div>
@@ -336,7 +344,8 @@
                       <h3 class="h3 card-title">Scalability and Flexibility</h3>
 
                       <p class="card-text">
-                        We provide professional service packages that may be tailored for small and large businesses. If you need one document translated or a website localized, we can help you expand globally.
+                        We provide professional service packages that may be tailored for small and large businesses. If
+                        you need one document translated or a website localized, we can help you expand globally.
                       </p>
 
                     </div>
@@ -352,13 +361,15 @@
                       <h3 class="h3 card-title">Comprehensive Quality Assurance</h3>
 
                       <p class="card-text">
-                        Maximum quality is achieved by peer review of each translation. Our translations are contextually exact and are done professionally. Our staff reviews all source documents to ensure quality and clarity.
+                        Maximum quality is achieved by peer review of each translation. Our translations are
+                        contextually exact and are done professionally. Our staff reviews all source documents to ensure
+                        quality and clarity.
                       </p>
 
                     </div>
                   </li>
 
-                 <!--  <li>
+                  <!--  <li>
                     <div class="chooseus-card">
 
                       <div class="card-icon">
@@ -451,13 +462,10 @@
             <!-- Item1 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Since active collaboration with Verify Ads, our visibility on the Internet has increased
+                  significantly. They really get down to the fundamentals of what our businesses require and provide
+                  solutions that count. I must admit we received fantastic service from them!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -471,8 +479,7 @@
                   <img src="./assets/img/image1.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Susant Nath</span>
                 </div>
               </div>
             </div>
@@ -481,13 +488,11 @@
             <!-- Item2 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>The people at Verify Ads have been great, in particular I want to thank you. They’ve been effective
+                  for finding potential customers or making people aware of the existence of our store. This is an
+                  efficient, business and businesslike approach which appears to be extremely effective. Highly
+                  recommended!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -501,8 +506,7 @@
                   <img src="./assets/img/image2.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Prangya Nayak</span>
                 </div>
               </div>
             </div>
@@ -511,10 +515,7 @@
             <!-- Item3 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -531,8 +532,7 @@
                   <img src="./assets/img/image3.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Akash Pradhan</span>
                 </div>
               </div>
             </div>
@@ -541,13 +541,10 @@
             <!-- Item4 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Verify Ads contributed hugely when it came to fine tuning our strategy and it saved a lot of cost in
+                  the long run. There being increased ROI and improved level of students’ engagement were observed. They
+                  did a very great job for me!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -561,8 +558,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Amresh Panda</span>
                 </div>
               </div>
             </div>
@@ -571,13 +567,10 @@
             <!-- Item5 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>I can say that collaborating with Verify Ads was easy and with no glitches. I highly recommend their
+                  services because they met the deadline. There has been a gradual improvement over the traffic and a
+                  progressive increase in the number of conversions. Awesome company, highly recommend services.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -591,8 +584,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Aditya Kar</span>
                 </div>
               </div>
             </div>
@@ -601,13 +593,11 @@
             <!-- Item6 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>We were able to expand our users on the internet and increased our sales through the use of Verify
+                  Ads. They are professional, creative and always quick to respond back in my team. If you have been
+                  looking to explore new avenues for your digital marketing business, then I highly endorse them for the
+                  job.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -621,8 +611,7 @@
                   <img src="./assets/img/image6.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Sidharth Rout</span>
                 </div>
               </div>
             </div>
@@ -633,7 +622,8 @@
 
           <div class="button-container">
             <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-        </div>
+          </div>
+
 
         </div>
 
@@ -736,8 +726,12 @@
   <div class="marquee-container">
     <h2>Our Services</h2>
     <div class="marquee-text">
-      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
-        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();"
+        onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email
+        And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom
+        Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development,
+        Software Testing Services & QA, Cloud Server Management
       </marquee>
     </div>
   </div>
