--- a/seo.html
+++ b/seo.html
@@ -74,7 +74,7 @@
     <div class="container">
 
       <a href="index.html" class="logo">
-      <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
+        <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -455,13 +455,10 @@
             <!-- Item1 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Since active collaboration with Verify Ads, our visibility on the Internet has increased
+                  significantly. They really get down to the fundamentals of what our businesses require and provide
+                  solutions that count. I must admit we received fantastic service from them!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -475,8 +472,7 @@
                   <img src="./assets/img/image1.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Susant Nath</span>
                 </div>
               </div>
             </div>
@@ -485,13 +481,11 @@
             <!-- Item2 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>The people at Verify Ads have been great, in particular I want to thank you. They’ve been effective
+                  for finding potential customers or making people aware of the existence of our store. This is an
+                  efficient, business and businesslike approach which appears to be extremely effective. Highly
+                  recommended!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -505,8 +499,7 @@
                   <img src="./assets/img/image2.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Prangya Nayak</span>
                 </div>
               </div>
             </div>
@@ -515,10 +508,7 @@
             <!-- Item3 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -535,8 +525,7 @@
                   <img src="./assets/img/image3.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Akash Pradhan</span>
                 </div>
               </div>
             </div>
@@ -545,13 +534,10 @@
             <!-- Item4 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Verify Ads contributed hugely when it came to fine tuning our strategy and it saved a lot of cost in
+                  the long run. There being increased ROI and improved level of students’ engagement were observed. They
+                  did a very great job for me!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -565,8 +551,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Amresh Panda</span>
                 </div>
               </div>
             </div>
@@ -575,13 +560,10 @@
             <!-- Item5 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>I can say that collaborating with Verify Ads was easy and with no glitches. I highly recommend their
+                  services because they met the deadline. There has been a gradual improvement over the traffic and a
+                  progressive increase in the number of conversions. Awesome company, highly recommend services.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -595,8 +577,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Aditya Kar</span>
                 </div>
               </div>
             </div>
@@ -605,13 +586,11 @@
             <!-- Item6 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>We were able to expand our users on the internet and increased our sales through the use of Verify
+                  Ads. They are professional, creative and always quick to respond back in my team. If you have been
+                  looking to explore new avenues for your digital marketing business, then I highly endorse them for the
+                  job.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -625,8 +604,7 @@
                   <img src="./assets/img/image6.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Sidharth Rout</span>
                 </div>
               </div>
             </div>
@@ -637,7 +615,7 @@
 
           <div class="button-container">
             <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-        </div>
+          </div>
 
 
         </div>
@@ -685,7 +663,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Key components of SEO include keyword research, on-page optimization, quality content, technical SEO, backlinks, user experience, and analytics monitoring.</p>
+              <p>Key components of SEO include keyword research, on-page optimization, quality content, technical SEO,
+                backlinks, user experience, and analytics monitoring.</p>
             </div>
           </div>
 
@@ -697,7 +676,9 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Technical SEO helps in improving the ability of search engine crawlers to access your site, indexing of your site, site speed, and security, thus leading to improved search rankings and better user experience..</p>
+              <p>Technical SEO helps in improving the ability of search engine crawlers to access your site, indexing of
+                your site, site speed, and security, thus leading to improved search rankings and better user
+                experience..</p>
             </div>
           </div>
 
@@ -709,7 +690,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Frequent updates should occur within a few-week interval in order to ensure optimization, update the content by making it more user friendly and addressing the technical issues.</p>
+              <p>Frequent updates should occur within a few-week interval in order to ensure optimization, update the
+                content by making it more user friendly and addressing the technical issues.</p>
             </div>
           </div>
 
@@ -721,7 +703,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Yes, SEO can be managed independently, but many a times the expert knowledge and experience will provide more efficient approaches to the problem and provide faster results.</p>
+              <p>Yes, SEO can be managed independently, but many a times the expert knowledge and experience will
+                provide more efficient approaches to the problem and provide faster results.</p>
             </div>
           </div>
         </div>
@@ -735,8 +718,12 @@
   <div class="marquee-container">
     <h2>Our Services</h2>
     <div class="marquee-text">
-      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
-        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();"
+        onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email
+        And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom
+        Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development,
+        Software Testing Services & QA, Cloud Server Management
       </marquee>
     </div>
   </div>
