--- a/smo.html
+++ b/smo.html
@@ -75,7 +75,7 @@
     <div class="container">
 
       <a href="index.html" class="logo">
-      <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
+        <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -211,7 +211,8 @@
                   <h3 class="h3 card-title">Social Media Strategy Development</h3>
 
                   <p class="card-text">
-                    Tailored strategies for targeted promotion, reach, and conversions in the sphere of Facebook, Instagram, Twitter, and LinkedIn.
+                    Tailored strategies for targeted promotion, reach, and conversions in the sphere of Facebook,
+                    Instagram, Twitter, and LinkedIn.
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -228,7 +229,8 @@
                   <h3 class="h3 card-title">Content Creation & Curation</h3>
 
                   <p class="card-text">
-                    High-quality, engaging content designed for your targeted audience and meets the brand values across the products and services you offer.
+                    High-quality, engaging content designed for your targeted audience and meets the brand values across
+                    the products and services you offer.
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -245,7 +247,8 @@
                   <h3 class="h3 card-title">Social Media Analytics & Reporting</h3>
 
                   <p class="card-text">
-                    Detailed performance reports that will help you understand the improvement, participation the effectiveness of your social media campaigns.
+                    Detailed performance reports that will help you understand the improvement, participation the
+                    effectiveness of your social media campaigns.
                   </p>
 
                   <a href="contact.html" class="btn btn-primary">Explore</a>
@@ -320,7 +323,8 @@
                       <h3 class="h3 card-title">Proven Expertise</h3>
 
                       <p class="card-text">
-                        Years of experience and track record proves that our company can help in the enhancement of the brands presence on social media.
+                        Years of experience and track record proves that our company can help in the enhancement of the
+                        brands presence on social media.
 
                     </div>
                   </li>
@@ -335,7 +339,8 @@
                       <h3 class="h3 card-title">Tailored Strategies</h3>
 
                       <p class="card-text">
-                        Custom strategies designed specifically for your brand, target customers as well as the goals you intend to achieve.
+                        Custom strategies designed specifically for your brand, target customers as well as the goals
+                        you intend to achieve.
                       </p>
 
                     </div>
@@ -351,7 +356,8 @@
                       <h3 class="h3 card-title">Results-Oriented Focus</h3>
 
                       <p class="card-text">
-                        Everything that we do is designed to deliver measurable outcomes whether its brand awareness, engagement, or conversions.
+                        Everything that we do is designed to deliver measurable outcomes whether its brand awareness,
+                        engagement, or conversions.
                       </p>
 
                     </div>
@@ -401,13 +407,10 @@
             <!-- Item1 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Since active collaboration with Verify Ads, our visibility on the Internet has increased
+                  significantly. They really get down to the fundamentals of what our businesses require and provide
+                  solutions that count. I must admit we received fantastic service from them!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -421,8 +424,7 @@
                   <img src="./assets/img/image1.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Susant Nath</span>
                 </div>
               </div>
             </div>
@@ -431,13 +433,11 @@
             <!-- Item2 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>The people at Verify Ads have been great, in particular I want to thank you. They’ve been effective
+                  for finding potential customers or making people aware of the existence of our store. This is an
+                  efficient, business and businesslike approach which appears to be extremely effective. Highly
+                  recommended!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -451,8 +451,7 @@
                   <img src="./assets/img/image2.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Prangya Nayak</span>
                 </div>
               </div>
             </div>
@@ -461,10 +460,7 @@
             <!-- Item3 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -481,8 +477,7 @@
                   <img src="./assets/img/image3.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Akash Pradhan</span>
                 </div>
               </div>
             </div>
@@ -491,13 +486,10 @@
             <!-- Item4 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Verify Ads contributed hugely when it came to fine tuning our strategy and it saved a lot of cost in
+                  the long run. There being increased ROI and improved level of students’ engagement were observed. They
+                  did a very great job for me!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -511,8 +503,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Amresh Panda</span>
                 </div>
               </div>
             </div>
@@ -521,13 +512,10 @@
             <!-- Item5 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>I can say that collaborating with Verify Ads was easy and with no glitches. I highly recommend their
+                  services because they met the deadline. There has been a gradual improvement over the traffic and a
+                  progressive increase in the number of conversions. Awesome company, highly recommend services.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -541,8 +529,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Aditya Kar</span>
                 </div>
               </div>
             </div>
@@ -551,13 +538,11 @@
             <!-- Item6 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>We were able to expand our users on the internet and increased our sales through the use of Verify
+                  Ads. They are professional, creative and always quick to respond back in my team. If you have been
+                  looking to explore new avenues for your digital marketing business, then I highly endorse them for the
+                  job.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -571,8 +556,7 @@
                   <img src="./assets/img/image6.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Sidharth Rout</span>
                 </div>
               </div>
             </div>
@@ -583,7 +567,7 @@
 
           <div class="button-container">
             <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-        </div>
+          </div>
 
 
         </div>
@@ -631,7 +615,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>SMO makes brands more prominent, helps to attract more visitors, encourage them to interact with the content, invites them to join a community, and thus, leads to conversions.</p>
+              <p>SMO makes brands more prominent, helps to attract more visitors, encourage them to interact with the
+                content, invites them to join a community, and thus, leads to conversions.</p>
             </div>
           </div>
 
@@ -643,7 +628,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Categorise on Facebook, Instagram, twitter, and LinkedIn depending on the audience to be targeted and the objectives to be achieved on the business.</p>
+              <p>Categorise on Facebook, Instagram, twitter, and LinkedIn depending on the audience to be targeted and
+                the objectives to be achieved on the business.</p>
             </div>
           </div>
 
@@ -655,7 +641,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Succeed at creating interesting content for your audience by using visuals, telling stories, polls, and questions, as well as by sharing user-generated content to reach out to your audience successfully.</p>
+              <p>Succeed at creating interesting content for your audience by using visuals, telling stories, polls, and
+                questions, as well as by sharing user-generated content to reach out to your audience successfully.</p>
             </div>
           </div>
 
@@ -667,7 +654,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>The relative success of SMO can be evaluated with the help of engagement rates, followers, site traffic, conversion, and share analytics.</p>
+              <p>The relative success of SMO can be evaluated with the help of engagement rates, followers, site
+                traffic, conversion, and share analytics.</p>
             </div>
           </div>
         </div>
@@ -680,8 +668,12 @@
   <div class="marquee-container">
     <h2>Our Services</h2>
     <div class="marquee-text">
-      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
-        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();"
+        onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email
+        And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom
+        Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development,
+        Software Testing Services & QA, Cloud Server Management
       </marquee>
     </div>
   </div>
