--- a/web.html
+++ b/web.html
@@ -75,7 +75,7 @@
     <div class="container">
 
       <a href="index.html">
-      <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
+        <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -366,7 +366,7 @@
                     </div>
                   </li>
 
-                 <!--  <li>
+                  <!--  <li>
                     <div class="chooseus-card">
 
                       <div class="card-icon">
@@ -416,7 +416,7 @@
 
                     </div>
                   </li>
-<!-- 
+                  <!-- 
                   <li>
                     <div class="chooseus-card">
 
@@ -496,13 +496,10 @@
             <!-- Item1 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Since active collaboration with Verify Ads, our visibility on the Internet has increased
+                  significantly. They really get down to the fundamentals of what our businesses require and provide
+                  solutions that count. I must admit we received fantastic service from them!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -516,8 +513,7 @@
                   <img src="./assets/img/image1.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Susant Nath</span>
                 </div>
               </div>
             </div>
@@ -526,13 +522,11 @@
             <!-- Item2 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>The people at Verify Ads have been great, in particular I want to thank you. They’ve been effective
+                  for finding potential customers or making people aware of the existence of our store. This is an
+                  efficient, business and businesslike approach which appears to be extremely effective. Highly
+                  recommended!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -546,8 +540,7 @@
                   <img src="./assets/img/image2.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Prangya Nayak</span>
                 </div>
               </div>
             </div>
@@ -556,10 +549,7 @@
             <!-- Item3 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
@@ -576,8 +566,7 @@
                   <img src="./assets/img/image3.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Akash Pradhan</span>
                 </div>
               </div>
             </div>
@@ -586,13 +575,10 @@
             <!-- Item4 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>Verify Ads contributed hugely when it came to fine tuning our strategy and it saved a lot of cost in
+                  the long run. There being increased ROI and improved level of students’ engagement were observed. They
+                  did a very great job for me!</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -606,8 +592,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Amresh Panda</span>
                 </div>
               </div>
             </div>
@@ -616,13 +601,10 @@
             <!-- Item5 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>I can say that collaborating with Verify Ads was easy and with no glitches. I highly recommend their
+                  services because they met the deadline. There has been a gradual improvement over the traffic and a
+                  progressive increase in the number of conversions. Awesome company, highly recommend services.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -636,8 +618,7 @@
                   <img src="./assets/img/image4.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Aditya Kar</span>
                 </div>
               </div>
             </div>
@@ -646,13 +627,11 @@
             <!-- Item6 Starts -->
             <div class="item testimonial-card">
               <main class="test-card-body">
-                <div class="quote">
-                  <i class="fa fa-quote-left"></i>
-                  <h2>Awesome Coding</h2>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+
+                <p>We were able to expand our users on the internet and increased our sales through the use of Verify
+                  Ads. They are professional, creative and always quick to respond back in my team. If you have been
+                  looking to explore new avenues for your digital marketing business, then I highly endorse them for the
+                  job.</p>
                 <div class="ratings">
                   <i class="fa-solid fa-star"></i>
                   <i class="fa-solid fa-star"></i>
@@ -666,8 +645,7 @@
                   <img src="./assets/img/image6.jpg">
                 </div>
                 <div class="profile-desc">
-                  <span>Person Name</span>
-                  <span>Description</span>
+                  <span>Sidharth Rout</span>
                 </div>
               </div>
             </div>
@@ -678,7 +656,7 @@
 
           <div class="button-container">
             <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-        </div>
+          </div>
 
 
         </div>
@@ -726,7 +704,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Good website design includes the ease of navigation, layout hierarchy, consistent brand standard, as well as layout responsiveness along with the clear calls for action for better user interaction.</p>
+              <p>Good website design includes the ease of navigation, layout hierarchy, consistent brand standard, as
+                well as layout responsiveness along with the clear calls for action for better user interaction.</p>
             </div>
           </div>
 
@@ -738,7 +717,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Responsive design adapts to certain interfaces of smaller or larger devices thus the functionality for multiple devices improves the customer experience and the search engine optimization.</p>
+              <p>Responsive design adapts to certain interfaces of smaller or larger devices thus the functionality for
+                multiple devices improves the customer experience and the search engine optimization.</p>
             </div>
           </div>
 
@@ -750,7 +730,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>The speeding up of the loading speed of a website is to optimize image responsive and minimal code, implement browser caching, and appropriately implementing Content Delivery Network (CDN).</p>
+              <p>The speeding up of the loading speed of a website is to optimize image responsive and minimal code,
+                implement browser caching, and appropriately implementing Content Delivery Network (CDN).</p>
             </div>
           </div>
 
@@ -762,7 +743,8 @@
               </span>
             </div>
             <div class="faq-item-body">
-              <p>Select relevant keywords, use appropriate content, on-site optimization, meta tags description, and work on site speed and structure.</p>
+              <p>Select relevant keywords, use appropriate content, on-site optimization, meta tags description, and
+                work on site speed and structure.</p>
             </div>
           </div>
         </div>
@@ -775,8 +757,12 @@
   <div class="marquee-container">
     <h2>Our Services</h2>
     <div class="marquee-text">
-      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
-        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();"
+        onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email
+        And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom
+        Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development,
+        Software Testing Services & QA, Cloud Server Management
       </marquee>
     </div>
   </div>
